@@ -89,13 +89,13 @@ CanvasPattern::CanvasPattern(cairo_surface_t* surface, bool repeatX, bool repeat
 
 CanvasPattern::CanvasPattern(CachedImage* cachedImage, bool repeatX, bool repeatY, bool originClean)
     : m_cachedImage(cachedImage)
+#if PLATFORM(CAIRO)
+    , m_platformImage(0)
+#endif
     , m_repeatX(repeatX)
     , m_repeatY(repeatY)
     , m_originClean(originClean)
 {
-#if PLATFORM(CAIRO)
-    m_platformImage = 0;
-#endif
     if (cachedImage)
         cachedImage->addClient(this);
 }
